fix: remove extra spacing for home component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
-html,
-body {
-  padding: 0;
-  margin: 0;
-}
-* {
-  box-sizing: border-box;
-}
+
